# vibebar-p4

./: Cargo.toml  PKGBUILD  README.md  flake.nix
src/: main.rs  style.css
src/modules/: battery.rs  brightness.rs  clock.rs  cpu.rs  disk.rs  gpu.rs  ip.rs  mod.rs  mpris.rs  network.rs  power_profiles.rs  ram.rs  scripts.rs  tray.rs  volume.rs  weather.rs  workspaces.rs
