[package]
name = "vibebar-p4"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.9"
gdk4 = "0.9"
glib = "0.20"
gtk4-layer-shell = "0.4"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
niri-ipc = "25.11.0"
swayipc-async = "3.0.0"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
mpris = "2.0"
zbus = "4.4"
system-tray = "0.8"
pulsectl-rs = "0.3"
async-trait = "0.1"
futures-util = "0.3"
nix = { version = "0.29", features = ["fs"] }
